# rpath_abrogation

source/: CMakeLists.txt  mathprog.c  mathprog.h  program.c
